--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "gsap": "^2.0.2",
     "hoek": "^6.1.2",
+    "imports-loader": "^0.8.0",
+    "ks-vue-scrollmagic": "^1.0.2",
+    "kute.js": "^1.6.6",
     "sal.js": "^0.5.0",
+    "scrollmagic": "^2.0.6",
     "semistandard": "^13.0.1",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
@@ -41,6 +46,7 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
+    "eslint-config-gsap": "^1.0.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
@@ -71,6 +77,8 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "style-loader": "^0.21.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.0.1",
     "vue-loader": "^13.3.0",
@@ -78,7 +86,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
