--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "sal.js": "^0.5.0",
     "scrollmagic": "^2.0.6",
     "semistandard": "^13.0.1",
-    "vue": "^2.5.2",
+    "vue": "^2.6.7",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-cli": "^2.9.6",
     "vue-meta": "^1.5.2",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1"
@@ -83,7 +84,7 @@
     "url-loader": "^1.0.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.6.7",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-cli": "^3.2.3",
