--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "http-server": "^0.11.1",
     "nightwatch": "^1.0.6",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.11.0",
@@ -86,7 +87,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.6.7",
-    "webpack": "^3.0.0",
+    "webpack": "^3.4.1",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^2.9.1",
