--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "ks-vue-scrollmagic": "^1.0.2",
