--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "ks-vue-scrollmagic": "^1.0.2",
     "kute.js": "^1.6.6",
+    "nodemailer": "^6.1.0",
     "nuxt": "^2.4.0",
     "nuxt-babel": "^1.0.1",
     "v-mask": "^1.3.3",
