--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "ks-vue-scrollmagic": "^1.0.2",
     "kute.js": "^1.6.6",
+    "node-sass": "^4.11.0",
     "nodemailer": "^6.1.0",
     "nuxt": "^2.4.0",
     "nuxt-babel": "^1.0.1",
